--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "dbvo-batch-tool"
-version = "0.0.0"
-description = "A Tauri App"
-authors = ["you"]
+version = "0.0.4"
+description = "Dragonborn Voice Over batch tool"
+authors = ["Mathiew May"]
 license = ""
 repository = ""
 edition = "2021"
